# lammps_education_metal_win

./: README.md  hybrid_memo.txt
HEA-SQS-data-template/: data_10x8x4_HCP_5elements.in  data_4x4x4_FCC_4elements.in  data_5x4x4_FCC_5elements.in  data_5x5x6_BCC_4elements.in  data_6x8x4_HCP_3elements.in  data_8x8x4_HCP_4elements.in
HEA-data-template/: data_3x4x4_FCC_3elements.in  data_5x5x6_BCC_3elements.in  data_5x6x6_BCC_5elements.in
Modified_BORN_matrix_Si_MSMPI/: init.in
Modified_ELASTIC_Si/: compliance_python3.py  data.in  potential.mod
Modified_ELASTIC_Si_MSMPI/: init.mod
Modified_ELASTIC_T_Si/: init.mod  potential.mod
Modified_ELASTIC_T_Si_MSMPI/: init.mod
Modified_NEB_Si_test_version/: final.sivac  in.neb.sivac  initial.sivac
Modified_NEB_Si_test_version_MSMPI/: in.neb.sivac  run_msmpi.bat
Modified_Phonon-FCC-Cu-EAM/: POSCAR  in.map  run.bat
Modified_Phonon-Graphene/: data.pos  in.lmp  run_plot.bat
Modified_Phonon-Graphite/: POSCAR  in.map  run.bat
Modified_Phonon-Graphite_MSMPI/: POSCAR  in.lmp  in.map  run_msmpi.bat  run_plot.bat
Modified_TAD_Si_test_version/: in.tad
Modified_TAD_Si_test_version_MSMPI/: in.tad  run_msmpi.bat
Reference_ELASTIC_Si/: compliance_original.py  init.mod
Reference_ELASTIC_T_Si/: init.mod
Reference_NEB_Si/: README.txt  final.hop1  final.hop2  in.neb.hop1  in.neb.hop1.end  in.neb.hop2  in.neb.sivac  initial.hop1  initial.hop1.end  initial.hop2  neb_combine.py  neb_final.py  run.bat  run_python.bat  settings.txt
potentials/Machine_Learning/ML-SNAP/NbMoTaW/: CMakeLists.txt  kimprovenance.edn  kimspec.edn
(+6367 files in other folders)
